--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,9 +14,10 @@ jobs:
         node-version: [16.x, 18.x]
 
     steps:
-      - name: Checkout
-        uses: action/checkout@v3
-      - name: Install and build
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
+
+      - name: Install and Build
         run: pnpm install && pnpm build
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
