chore:🌻 added / on last

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nsdhso.github.io/landing-state-vex",
+  "homepage": "https://nsdhso.github.io/landing-state-vex/",
   "name": "landing-state-vex",
   "version": "0.0.0",
   "private": true,
