--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,21 +9,40 @@ permissions:
 
 jobs:
   build:
+    name: Build and Test
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v2
       - uses: pnpm/action-setup@v2
         name: Install pnpm
         id: pnpm-install
         with:
-          version: 7
-          run_install: false
-      - name: Install and Build
-        run: pnpm install && pnpm build
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
+         version: 7
+         run_install: false
+      - name: Install dependencies
+        run: pnpm install
+      - name: Build
+        run: pnpm build
+      - name: Archive build
+        if: success()
+        uses: actions/upload-artifact@v1
         with:
-          FOLDER: dist
+          name: deploy_dist
+          path: dist
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Download build
+        uses: actions/download-artifact@v1
+        with:
+          name: deploy_dist
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@releases/v3
+        with:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           BRANCH: gh-pages
+          FOLDER: deploy_dist/
