--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/",
+    "format": "prettier --write --staged",
     "predeploy": "pnpm build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -40,11 +41,13 @@
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "gh-pages": "^5.0.0",
+    "husky": "^8.0.0",
     "i": "^0.3.7",
     "jsdom": "^22.1.0",
     "npm": "^9.7.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
+    "pretty-quick": "^3.1.3",
     "sass": "^1.63.4",
     "typescript": "~5.0.4",
     "vite": "^4.3.9",
