--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dex": "^1.1.0",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "firebase": "^9.22.2",
     "gh-pages": "^5.0.0",
     "husky": "^8.0.0",
     "i": "^0.3.7",
