--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jsdom": "^22.1.0",
     "npm": "^9.7.1",
     "npm-run-all": "^4.1.5",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
     "sass": "^1.63.4",
